# cool

Additional Files/: ManualSysMapper.cpp  loader.cpp  lol.bat
DBD/: item.h  main.cpp  memory.h  offsets.h  overlay.h  ui.h
Garage/: gar-connect.php  gar-create-auto1.php  gar-create-auto2.php  gar-create-klant1.php  gar-create-klant2.php  gar-delete-auto1.php  gar-delete-auto2.php  gar-delete-auto3.php  gar-delete-klant1.php  gar-delete-klant2.php  gar-delete-klant3.php  gar-menu.php  gar-read-auto.php  gar-read-klant.php  gar-stylesheet.css  gar-update-auto1.php  gar-update-auto2.php  gar-update-auto3.php  gar-update-klant1.php  gar-update-klant2.php  gar-update-klant3.php  gar-zoek-auto1.php  gar-zoek-auto2.php  gar-zoek-klant1.php  gar-zoek-klant2.php
KernelDriverLoader/: KernelDriverLoader.sln  KernelDriverLoader.vcxproj  KernelDriverLoader.vcxproj.filters  README.md  build.bat
KernelDriverLoader/includes/: nt.hpp
KernelDriverLoader/includes/core/: driver_manager.hpp  dynamic_mapper.hpp  kernel_bridge.hpp  secure_loader.hpp
KernelDriverLoader/includes/utils/: intel_driver.hpp  kdmapper.hpp  logging.hpp  portable_executable.hpp  resource_utils.hpp  secure_memory.hpp
KernelDriverLoader/resources/: app.manifest  resource.h  resource.rc
KernelDriverLoader/resources/drivers/: memdriver.sys
KernelDriverLoader/src/: main.cpp
KernelDriverLoader/src/core/: driver_manager.cpp  dynamic_mapper.cpp  kernel_bridge.cpp  secure_loader.cpp
KernelDriverLoader/src/utils/: intel_driver.cpp  kdmapper.cpp  portable_executable.cpp  secure_memory.cpp
UnifiedLoader/: CMakeLists.txt  README.md  UnifiedLoader.rc  UnifiedLoader.sln  UnifiedLoader.vcxproj  UnifiedLoader.vcxproj.filters  bin2header.vcxproj  build.bat  vs_build.bat
UnifiedLoader/include/core/: dynamic_mapper.hpp  kernel_bridge.hpp  secure_loader.hpp
UnifiedLoader/include/drivers/: cheat.hpp  memdriver.hpp  rwdrv.hpp
UnifiedLoader/include/utils/: intel_driver_resource.hpp  kdmapper_impl.hpp  logging.hpp  secure_memory.hpp  service.hpp  utils.hpp
UnifiedLoader/resources/: resource.rc.in
UnifiedLoader/src/: main.cpp
UnifiedLoader/src/core/: dynamic_mapper.cpp  dynamic_mapper.hpp  kernel_bridge.cpp  kernel_bridge.hpp  secure_loader.cpp  secure_loader.hpp
UnifiedLoader/src/utils/: kdmapper_impl.cpp  portable_executable.hpp  secure_memory.cpp  service.cpp  utils.cpp  utils.hpp
UnifiedLoader/tools/: CMakeLists.txt  bin2header.cpp
XwvWx/: GDRVMapper.cpp  HelloWorldMapper.cpp  README.md  load_gdrv.bat  run_dbd_cheat.bat  start_cheat.bat  test_driver_loader.bat  test_vulnerable_drivers.bat
XwvWx/DBD/: DBD-ESP.sln  DBD-ESP.vcxproj  DBD-ESP.vcxproj.filters  main.cpp  overlay.h  types.h  ui.h
XwvWx/DBD/DBD-ESP/x64/Debug/: vc143.idb
XwvWx/GDRVMapper/: GDRVMapper.cpp  GDRVMapper.h  GDRVMapper.sln  GDRVMapper.vcxproj  GDRVMapper.vcxproj.filters  GDRVTypes.h  KernelMemory.cpp  KernelMemory.h  PageTableUtils.cpp  PageTableUtils.h  ShellcodeUtils.cpp  ShellcodeUtils.h  main.cpp
XwvWx/GDRVMapper/x64/Release/: GDRVMapper.exe.recipe  GDRVMapper.iobj  GDRVMapper.ipdb
XwvWx/GDRVMapper/x64/Release/GDRVMapper.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  GDRVMapper.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
XwvWx/ManualSysMapper/ManualSysMapper/: ManualSysMapper.sln  ManualSysMapper.vcxproj  ManualSysMapper.vcxproj.filters
XwvWx/loader/loader/: Loader.cpp  PhysicalMemoryAccess.cpp  PhysicalMemoryAccess.h  loader.sln  loader.vcxproj  loader.vcxproj.filters
XwvWx/memdriver/: memdriver.c  memdriver.inf  memdriver.sln  memdriver.vcxproj  memdriver.vcxproj.filters
XwvWx/memdriver/x64/Debug/: memdriver.sys.recipe  memdriver.vcxproj.FileListAbsolute.txt
XwvWx/memdriver/x64/Debug/memdriver/: memdriver.cat  memdriver.inf  memdriver.sys
XwvWx/memdriver/x64/Debug/memdriver.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  Inf2Cat.command.1.tlog  inf2cat-expand.12004.read.1.tlog  inf2cat-expand.12004.write.1.tlog  inf2cat-expand.read.1.tlog  inf2cat-expand.write.1.tlog  inf2cat.read.1.tlog  inf2cat.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  memdriver.lastbuildstate  signtool.command.1.tlog  signtool.read.1.tlog  signtool.timestamp.1.tlog  signtool.write.1.tlog  stampinf.command.1.tlog  stampinf.write.1.tlog
XwvWx/memdriver/x64/Release/: memdriver.cer  memdriver.inf  memdriver.sys.recipe  memdriver.vcxproj.FileListAbsolute.txt
XwvWx/memdriver/x64/Release/memdriver.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Inf2Cat.command.1.tlog  inf2cat-expand.1188.read.1.tlog  inf2cat-expand.15776.read.1.tlog  inf2cat-expand.15776.write.1.tlog  inf2cat-expand.23336.write.1.tlog  inf2cat-expand.25200.read.1.tlog  inf2cat-expand.25200.write.1.tlog  inf2cat-expand.32444.write.1.tlog  inf2cat-expand.3784.read.1.tlog  inf2cat-expand.39664.write.1.tlog  inf2cat-expand.5940.read.1.tlog  inf2cat-expand.5940.write.1.tlog  inf2cat-expand.7752.read.1.tlog  inf2cat-expand.7752.write.1.tlog  inf2cat-expand.read.1.tlog  inf2cat-expand.write.1.tlog  inf2cat.read.1.tlog  inf2cat.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  memdriver.lastbuildstate  signtool.command.1.tlog  signtool.read.1.tlog  signtool.timestamp.1.tlog  signtool.write.1.tlog  stampinf.command.1.tlog  stampinf.write.1.tlog
ahk_script/: aimbot.ahk  config.ahk  main.ahk  rcs.ahk  recoil.ahk  simple.ahk  test.ahk  utils.ahk
ahk_script/fixed/: aimbot.ahk  config.ahk  fixed_test.ahk  main.ahk  recoil.ahk  simple.ahk  utils.ahk
dbd_esp/: .gitignore  README.md  build.bat  install.bat  requirements.txt  run.py  setup.py
dbd_esp/src/: __init__.py  entity.py  main.py  memory.py  offsets.py  overlay.py  process_utils.py  status.py
kernel/: CMakeLists.txt  UniversalLoader.cpp  UniversalLoader2.aps  UniversalLoader2.rc  cheat.hpp  embed_to_header.cpp  intel_driver.hpp  kdmapper.hpp  main.cpp  make_headers.bat  memdriver.hpp  nt.hpp  resource2.h  rwdrv.hpp
(+27 files in other folders)
